Tweak styles & spacing for issue intro authors

--- a/themes/startwords/assets/scss/issue/_single.scss
+++ b/themes/startwords/assets/scss/issue/_single.scss
@@ -20,10 +20,11 @@ body.issue {
             & > p { margin-top: rem(5px); }
 
             // introduction authors
-            address {
-            display: inline;
-            font-style: normal;
-            color: $black;
+            address, .authors a {
+                display: inline;
+                font-style: normal;
+                color: $black;
+                text-decoration: none;
             }
 
             .translators {
